config/immich/postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-data
          hostPath:
            path: /mnt/juicefs/immich/postgres

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: immich
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
