config/immich/immich-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      containers:
        #
        # IMMICH SERVER
        #
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:release

          securityContext:
            privileged: true

          command:
            - sh
            - -c
            - |
              [...]
          ports:
            - containerPort: 2283

          volumeMounts:
            - name: immich-minio
              mountPath: /mnt/object-storage

            - name: immich-juicefs
              mountPath: /mnt/block-storage

          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
            limits:
              cpu: "3000m"
              memory: "8Gi"

        #
        # MACHINE LEARNING
        #
        - name: immich-ml
          image: ghcr.io/immich-app/immich-machine-learning:release

          volumeMounts:
            - name: immich-minio
              mountPath: /cache

          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
            limits:
              cpu: "2000m"
              memory: "2Gi"

        #
        # REDIS
        #
        - name: redis
          image: docker.io/valkey/valkey:9

          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"

        #
        # POSTGRES
        #
        - name: postgres
          image: tensorchord/pgvecto-rs:pg14-v0.2.0

          volumeMounts:
            - name: immich-juicefs
              mountPath: /var/lib/postgresql/data
              subPath: postgres

          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
            limits:
              cpu: "2000m"
              memory: "2Gi"

      volumes:
        #
        # S3FS mount target
        #
        - name: immich-minio
          emptyDir: {}

        #
        # JuiceFS shared host mount
        #
        - name: immich-juicefs
          hostPath:
            path: /mnt/juicefs/immich
            type: DirectoryOrCreate

        #
        # ML cache
        #
        - name: ml-cache
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: immich
spec:
  selector:
    app: immich
  ports:
    - port: 80
      targetPort: 2283
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
    - host: immich.colins.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich
                port:
                  number: 80

  tls:
    - hosts:
        - immich.colins.io
      secretName: wildcard-colins-io-tls
